# grail-rs

./: .gitignore  Cargo.toml  LICENCE-APACHE  LICENCE_MIT  README.md
examples/: cli.rs  interactive.rs
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
src/: array.rs  intonate.rs  jitter.rs  lib.rs  random.rs  select.rs  sequence.rs  synthesise.rs  transcribe.rs  voice.rs
src/languages/: mod.rs
src/voices/: generic.rs  mod.rs
