[package]
name = "grail-rs" 
description = "A simple formant speech synthesizer"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dimev/grail-rs"
documentation = "https://docs.rs/grail-rs"
keywords = ["speech", "audio"]
categories = ["multimedia"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
# what dependencies?

[dev-dependencies]
# still need some here to help with audio playback
# because that's generally difficult to do
rodio = "0.14"