[package]
name = "grail-rs" 
description = "A simple formant speech synthesizer"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dimev/grail-rs"
documentation = "https://docs.rs/grail-rs"
keywords = ["speech", "audio"]
categories = ["multimedia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# no dependencies needed

[dev-dependencies]
# but we do need this for examples
cpal = "0.13.5"
