[package]
name = "grail-rs-cli" 
description = "A simple formant speech synthesizer"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Dimev/grail-rs"
documentation = "https://docs.rs/grail-rs"
keywords = ["speech", "audio"]
categories = ["multimedia"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grail-rs = { path = "../../" }
# audio playback
# TODO: just use CPAL
rodio = "0.14"

# TODO: clap for argparse